--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,10 @@
         "node": true
     },
     "sourceType": "module",
-    "extends": "eslint:recommended",
+    "extends": [
+        "eslint:recommended",
+        "plugin:n/recommended"
+    ],
     "parserOptions": {
         "ecmaVersion": "latest"
     },
