--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "express-async-handler": "^1.2.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "oracledb": "^5.3.0"
+    "oracledb": "^6.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0"
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-n": "^17.0.0",
+    "eslint-plugin-promise": "^7.2.1"
   }
 }
