--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "oracledb": "^6.0.0"
+    "morgan": "^1.10.1",
+    "oracledb": "^6.10.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
